--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
-	"main": "index.js",
-	"dependencies": {
-		"discord.js": "^11.5.1"
-	}
+  "name": "CrossExchange",
+  "version": "0.2.0",
+  "description": "Yet another Discord bot.",
+  "main": "index.js",
+  "dependencies": {
+    "discord.js": "^12.2.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WatDuhHekBro/CrossExchange.git"
+  },
+  "author": "WatDuhHekBro",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/WatDuhHekBro/CrossExchange/issues"
+  },
+  "homepage": "https://github.com/WatDuhHekBro/CrossExchange#readme"
 }
