Added subcommand recursion and currently-buggy JSON auto-loading

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "CrossExchange",
   "version": "0.2.0",
   "description": "Yet another Discord bot.",
-  "main": "index.js",
+  "main": "main/index.js",
   "dependencies": {
     "discord.js": "^12.2.0"
   },
