--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "CrossExchange",
-  "version": "0.2.0",
+  "name": "crossexchange",
+  "version": "0.6.9",
   "description": "Yet another Discord bot.",
-  "main": "main/index.js",
+  "main": "dist/index.js",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "@types/inquirer": "^6.5.0",
+    "discord.js": "^12.2.0",
+    "inquirer": "^7.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^14.0.22",
+    "@types/ws": "^7.2.6",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^3.9.6"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\""
   },
+  "author": "WatDuhHekBro",
+  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/WatDuhHekBro/CrossExchange.git"
   },
-  "author": "WatDuhHekBro",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/WatDuhHekBro/CrossExchange/issues"
   },
