Reorganized classes to fit better modularization

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
+    "autobuild": "tsc && npm start",
     "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"node dist/index.js dev\""
   },
