Added test suite and production builder (v1.1.1)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
 		"strictFunctionTypes": true,
 		"strictPropertyInitialization": true,
 		"removeComments": true
-	}
+	},
+	"exclude": ["test"]
 }
