--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-	"name": "crossexchange",
-	"version": "1.1.3",
-	"description": "Yet another Discord bot.",
-	"main": "dist/index.js",
-	"dependencies": {
-		"chalk": "^4.1.0",
-		"discord.js": "^12.2.0",
-		"inquirer": "^7.3.1"
-	},
-	"devDependencies": {
-		"@types/inquirer": "^6.5.0",
-		"@types/mocha": "^8.0.3",
-		"@types/node": "^14.0.22",
-		"@types/ws": "^7.2.6",
-		"mocha": "^8.1.2",
-		"ts-node": "^9.0.0",
-		"tsc-watch": "^4.2.9",
-		"typescript": "^3.9.6"
-	},
-	"scripts": {
-		"build": "tsc && npm prune --production",
-		"start": "node dist/index.js",
-		"once": "tsc && npm start",
-		"dev": "tsc-watch --onSuccess \"node dist/index.js dev\"",
-		"test": "mocha --require ts-node/register --extension ts --recursive"
-	},
-	"author": "WatDuhHekBro",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/WatDuhHekBro/CrossExchange.git"
-	},
-	"bugs": {
-		"url": "https://github.com/WatDuhHekBro/CrossExchange/issues"
-	},
-	"homepage": "https://github.com/WatDuhHekBro/CrossExchange#readme"
+    "name": "crossexchange",
+    "version": "1.1.3",
+    "description": "Yet another Discord bot.",
+    "main": "dist/index.js",
+    "scripts": {
+        "build": "tsc --project tsconfig.prod.json && npm prune --production",
+        "start": "node .",
+        "once": "tsc && npm start",
+        "dev": "tsc-watch --onSuccess \"node . dev\"",
+        "test": "mocha --require ts-node/register --extension ts --recursive",
+        "format": "prettier --write **/*",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "chalk": "^4.1.0",
+        "discord.js": "^12.5.3",
+        "inquirer": "^8.0.0"
+    },
+    "devDependencies": {
+        "@types/inquirer": "^7.3.1",
+        "@types/mocha": "^8.2.2",
+        "@types/node": "^14.14.37",
+        "@types/ws": "^7.4.1",
+        "husky": "^6.0.0",
+        "mocha": "^8.3.2",
+        "prettier": "^2.2.1",
+        "ts-node": "^9.1.1",
+        "tsc-watch": "^4.2.9",
+        "typescript": "^4.2.4"
+    },
+    "author": "WatDuhHekBro",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/WatDuhHekBro/CrossExchange.git"
+    },
+    "bugs": {
+        "url": "https://github.com/WatDuhHekBro/CrossExchange/issues"
+    },
+    "homepage": "https://github.com/WatDuhHekBro/CrossExchange#readme"
 }
