Ported TravBot-v3's version of the major overhaul

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "chalk": "^4.1.0",
         "discord.js": "^12.5.3",
-        "inquirer": "^8.0.0"
+        "inquirer": "^8.0.0",
+        "onion-lasers": "file:onion-lasers-1.0.0.tgz"
     },
     "devDependencies": {
         "@types/inquirer": "^7.3.1",
